save to pdf handling

--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.11.0",
+    "dom-to-image-more": "^3.7.2",
+    "html-to-image": "^1.11.13",
+    "jspdf": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2"
